--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@nuxt/ui-pro": "^1.4.1",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/nuxt": "^11.0.3",
     "nuxt": "^3.13.0",
     "nuxt-tiptap-editor": "^1.2.1",
     "vue": "latest"
